<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="musiccon">Music</string>
    <string name="moviecon">Movies</string>
    <string name="newscon">News</string>
    <string name="sportscon">Sports</string>
    <string name="technologycon">Technology</string>
     <string name="androidcon">Android</string>
    <string name="app_name">Read Out Loud</string>
    <string name="title_article_detail">Post Detail</string>
    <string name="title_article_list">Reader</string>
    <string name="btn_offline_reading">Save for later</string>
    <string name="btn_mark_unread">Mark unread</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_listen">Listen</string>
    <string name="AppName">Read Out Loud</string>

</resources>
