<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="comCS442.reader.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_weight="0.30" >

                <ImageButton
                    android:id="@+id/image2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/androidcon"
                    android:onClick="onClick"
                    android:src="@drawable/android2" />

                <ImageButton
                    android:id="@+id/image3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/newscon"
                    android:onClick="onClick"
                    android:src="@drawable/news1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_weight="0.30" >

                <ImageButton
                    android:id="@+id/image4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/musiccon"
                    android:onClick="onClick"
                    android:src="@drawable/music1" />

                <ImageButton
                    android:id="@+id/image5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/sportscon"
                    android:onClick="onClick"
                    android:src="@drawable/sports" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_weight="0.30" >

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/technologycon"
                    android:onClick="onClick"
                    android:src="@drawable/pc" />

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00"
                    android:contentDescription="@string/moviecon"
                    android:onClick="onClick"
                    android:src="@drawable/movie" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>